# cyber-immune-k8s-auth

./: LICENSE  README.md  domains.yaml  falco-values.yaml  gatekeeper-gvisor.yaml  network-policies.yaml  start-config.sh
base/: Dockerfile  go.mod  main.go
base/auth-service/: Dockerfile  auth-deployment.yaml  auth-service.tar  go.mod  ingress-timeout-config.yaml  login-ingress.yaml  main.go  security.proto  validate-ingress.yaml
base/auth-service/security/: security.pb.go  security_grpc.pb.go
base/loki-config/: loki-values.yaml
base/token_enforcer/: Dockerfile  go.mod  go.sum  main.go  token-enforcer-deployment.yaml  token-enforcer-service.yaml
base/token_enforcer/refmon/: refmon.pb.go  refmon.proto  refmon_grpc.pb.go
base/token_enforcer/security/: security.pb.go
gatekeeper-generated/: generate_gatekeeper.py  generated-secret-constraints.yaml  template-secret-access.yaml
policy/: data_access-control.yaml  data_access_control_gatekeeper.yaml  inter_domain_interactions.yaml  network_security.yaml  security-policies-configmap.yaml
reference-monitor/refmon/: Cargo.toml  Dockerfile  build.rs  networkpolicy-refmon.yaml  refmon-deployment.yaml
reference-monitor/refmon/src/: main.rs  refmon.proto
security-controller/: Dockerfile  go.mod  go.sum  main.go  policies.go  security-controller-deployment.yaml  security.proto
tests/: curl-pod-restricted.yaml  edge.js  negative.js  positive.js
