[package]
name = "refmon"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
tonic-health = "0.11"

[build-dependencies]
tonic-build = "0.11"
